@@ -12,6 +12,8 @@
  * Sends Messages using the mail() function.
  *
  * @author Chris Corbyn
+ *
+ * @deprecated since 5.4.5 (to be removed in 6.0)
  */
 class Swift_MailTransport extends Swift_Transport_MailTransport
 {
